simple-fe/ingress-simple-fe.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fe-ingress
  namespace: fe
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  rules:
  - host: "simple-fe.3.39.19.175.sslip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: simple-fe-svc
            port: 
              number: 8080
